manifest/k8s/rbac-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-test
  namespace: fastapi
spec:
  serviceAccountName: app-service-account
  containers:
  - name: kubectl
    image: bitnami/kubectl:latest
    command: ["sleep", "3600"]
  restartPolicy: Never
