manifest/k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: fastapi
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - name: "postgres"
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
