manifest/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx-fastapi
  rules:
    - host: fastapi.localhost
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: fastapi-app
                namespace: fastapi
                port:
                  number: 80
